<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/travel_bg"
    tools:context=".Activity.Cinema">

    <TextView
        android:id="@+id/txtConfirmationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/cinema_booking"
        android:textColor="@color/btnColour"
        android:textSize="30sp"
        android:textStyle="bold|normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDetails"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_row="0"
        android:layout_rowWeight="10"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="@color/textColor"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies_showing"
                android:textSize="18sp"
                android:layout_marginBottom="15dp" />

            <RadioGroup
                android:id="@+id/rdgMovies"
                android:layout_width="287dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbtnMovie1"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <RadioButton
                    android:id="@+id/rdbtnMovie2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtShowingTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showing_time"
                android:textSize="18sp"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:id="@+id/rdgShowingTimes"
                android:layout_width="281dp"
                android:layout_height="62dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <RadioButton
                    android:id="@+id/rdbtnSTime1"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <RadioButton
                    android:id="@+id/rdbtnSTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtNoOfPeopleMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_people"
                    android:textSize="18sp"
                    android:layout_marginEnd="15dp" />

                <EditText
                    android:id="@+id/etxtNoOfPeopleMovie"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="number"
                    android:layout_margin="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txtDateCinema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date: "
                    android:textSize="18sp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"/>

                <EditText
                    android:id="@+id/etxtDateCinema"
                    android:hint="DD/MM/YYYY"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="date" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCinemaConfrim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/btnColour"
        android:elevation="15dp"
        android:onClick="confirmBtn"
        android:text="@string/confrim"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936"
        app:shapeAppearanceOverlay="@style/Button5" />

    <Button
        android:id="@+id/btnBackCinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/btnColour"
        android:elevation="15dp"
        android:onClick="backBtn"
        android:text="@string/back_home"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCinemaConfrim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/Button5" />


</androidx.constraintlayout.widget.ConstraintLayout>